Vault-Deployment/manifests/network-policies/networkpolicy-loki-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/network-policies
# https://support.hashicorp.com/hc/en-us/articles/13444259109523-Information-in-regards-to-Audit-Log-when-running-Vault-in-Kubernetes
#
# Network policiy for controlling communication between Vault, OTLP/Promtail and Loki
---
# Allow ingress from OTLP/Promtail/Grafana
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-allow-from-otlp
  namespace: loki
spec:
  # An empty podSelector selects all pods in the namespace
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: otlp
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: promtail
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-prometheus-stack
      ports:
        - protocol: TCP
          port: 3100
